--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "practise-programming",
+  "name": "youtube-downloader",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Moonlight",
   "license": "ISC",
-  "description": "",
+  "description": "A YouTube video downloader app",
   "dependencies": {
-    "express": "^4.21.2"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "ytdl-core": "^4.11.5"
   }
 }
-
